# rust-workbook

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
.cargo/: config
http-warp/: Cargo.toml  README.md
http-warp/src/: http_service.rs  main.rs
http-warp/tests/: http_service.rs  integration_test.rs  main.rs
language/: Cargo.toml
language/src/: comment.rs  debug.rs  display.rs  formatting.rs  lib.rs
object-oriented/: Cargo.toml
object-oriented/src/: lib.rs
object-oriented/tests/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
