[workspace]
members = ["http-warp", "tests"]

[workspace.package]
version = "1.0.0"
authors = [ "Lei Zhang <zhanglei@apahe.org>" ]
edition = "2021"

[workspace.dependencies]
warp = { version = "0.3" }
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
# tokio = { version = "1.21", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
