[workspace]
members = [
    "language",
    "object-oriented",
    "http-warp",
    "tests"]

[workspace.package]
version = "1.0.0"
authors = [ "Lei Zhang <zhanglei@apahe.org>" ]
edition = "2021"

[workspace.dependencies]
warp = { version = "0.3" } # https://github.com/seanmonstar/warp
tokio = { version = "1.21.1", features = ["full"] } # https://github.com/tokio-rs/tokio
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
reqwest = { version = "0.11"}
futures = { version = "0.3" }
awaitility = { version = "0.2" }
log = { version = "0.4"}
env_logger = { version = "0.9"}


